// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGrid snapshots should match snapshot 1`] = `
.c0 {
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  grid-auto-flow: row;
  grid-template-columns: repeat(4,minmax(0,1fr));
  grid-gap: 20px 30px;
}

.c2 {
  word-break: break-word;
}

.c1 {
  color: #1f1f22;
  display: inline-block;
  font-size: 14px;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 5px 5px 5px 0;
  color: #717175;
  font-size: 0.75rem;
  font-weight: 600;
  text-transform: uppercase;
}

<DataGrid
  columns={4}
  data={
    Immutable.Map {
      "lastName": "Werbenjagermanjensen",
      "firstName": "Smitty",
      "middleName": "",
      "sex": "M",
      "gender": "M",
      "ethnicity": "Fish",
      "dob": "02/22/2002",
      "identifier": "365ba027-0c71-47d1-a5f4-61346ed96d8c",
    }
  }
  emptyString="---"
  truncate={false}
>
  <styled.div
    columns={4}
  >
    <div
      className="c0"
    >
      <div
        key="0"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            lastName
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            Werbenjagermanjensen
          </div>
        </styled.div>
      </div>
      <div
        key="1"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            firstName
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            Smitty
          </div>
        </styled.div>
      </div>
      <div
        key="2"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            middleName
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          />
        </styled.div>
      </div>
      <div
        key="3"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            sex
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            M
          </div>
        </styled.div>
      </div>
      <div
        key="4"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            gender
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            M
          </div>
        </styled.div>
      </div>
      <div
        key="5"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            ethnicity
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            Fish
          </div>
        </styled.div>
      </div>
      <div
        key="6"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            dob
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            02/22/2002
          </div>
        </styled.div>
      </div>
      <div
        key="7"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            identifier
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            365ba027-0c71-47d1-a5f4-61346ed96d8c
          </div>
        </styled.div>
      </div>
    </div>
  </styled.div>
</DataGrid>
`;

exports[`DataGrid snapshots should match snapshot with labels 1`] = `
.c0 {
  display: grid;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  grid-auto-flow: row;
  grid-template-columns: repeat(4,minmax(0,1fr));
  grid-gap: 20px 30px;
}

.c2 {
  word-break: break-word;
}

.c1 {
  color: #1f1f22;
  display: inline-block;
  font-size: 14px;
  font-stretch: normal;
  font-style: normal;
  font-weight: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  margin: 5px 5px 5px 0;
  color: #717175;
  font-size: 0.75rem;
  font-weight: 600;
  text-transform: uppercase;
}

<DataGrid
  columns={4}
  data={
    Immutable.Map {
      "lastName": "Werbenjagermanjensen",
      "firstName": "Smitty",
      "middleName": "",
      "sex": "M",
      "gender": "M",
      "ethnicity": "Fish",
      "dob": "02/22/2002",
      "identifier": "365ba027-0c71-47d1-a5f4-61346ed96d8c",
    }
  }
  emptyString="---"
  labelMap={
    Immutable.Map {
      "lastName": "Last name",
      "firstName": "First name",
      "middleName": "Middle name",
      "sex": "Sex",
      "gender": "Gender",
      "ethnicity": "Ethnicity",
      "dob": "DOB",
      "identifier": "Identifier",
    }
  }
  truncate={false}
>
  <styled.div
    columns={4}
  >
    <div
      className="c0"
    >
      <div
        key="0"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            Last name
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            Werbenjagermanjensen
          </div>
        </styled.div>
      </div>
      <div
        key="1"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            First name
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            Smitty
          </div>
        </styled.div>
      </div>
      <div
        key="2"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            Middle name
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          />
        </styled.div>
      </div>
      <div
        key="3"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            Sex
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            M
          </div>
        </styled.div>
      </div>
      <div
        key="4"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            Gender
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            M
          </div>
        </styled.div>
      </div>
      <div
        key="5"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            Ethnicity
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            Fish
          </div>
        </styled.div>
      </div>
      <div
        key="6"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            DOB
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            02/22/2002
          </div>
        </styled.div>
      </div>
      <div
        key="7"
      >
        <styled.label
          subtle={true}
        >
          <label
            className="c1"
          >
            Identifier
          </label>
        </styled.label>
        <styled.div
          truncate={false}
        >
          <div
            className="c2"
          >
            365ba027-0c71-47d1-a5f4-61346ed96d8c
          </div>
        </styled.div>
      </div>
    </div>
  </styled.div>
</DataGrid>
`;
